# tftp

./: CMakeLists.txt  CMakePresets.json  CPPLINT.cfg
apps/: CMakeLists.txt
apps/client/: CMakeLists.txt  client.cpp
cmake/: enable_unit_testing.cmake  set_compile_link_flags.cmake
docker/: Dockerfile
docs/: CMakeLists.txt  Doxyfile.in
include/client/: client_cmd.h  cmd.h  cmd_processor.h  config.h
include/common/: pack.h  parse.h  translate.h  types.h  udp_socket.h
scripts/: build.sh  clean.sh  config.sh  create_toolchain_img.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client_cmd.cpp  cmd.cpp  cmd_processor.cpp  config.cpp
src/common/: CMakeLists.txt  pack.cpp  parse.cpp  translate.cpp  udp_socket.cpp
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  client_test.cpp  cmd_parse_test.cpp  config_test.cpp
tests/common/: CMakeLists.txt  pack_test.cpp  parse_test.cpp
